plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.solif'
version = '0.0.1-SNAPSHOT'
description = 'blue-sol-backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.15'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'software.amazon.awssdk:s3:2.29.43' // AWS S3
	implementation 'com.google.zxing:core:3.5.4' // QR Code 생성 (ZXing)
	implementation 'com.google.zxing:javase:3.5.4' // QR Code 생성 (ZXing)
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.4.0'
//	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// Google Cloud Vision API
	implementation 'com.google.cloud:google-cloud-vision:3.20.0'

	runtimeOnly 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}

configurations.all { // listenablefuture:1.0을 강제로 배제 + guava 하나로 통일
	exclude group: "com.google.guava", module: "listenablefuture"
}

